# hupy

./: .gitignore  .hupy.config.json  .hupy.config.jsonc  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  pyproject.toml
docs/: bdc_doc.md  cbm_doc.md  chain_doc.md  flow_doc.md  hb_doc.md  hook_chain_doc.md  hupy_config_doc.md  install_doc.md  pch_doc.md  pt_doc.md  stub_doc.md  ttg_doc.md
examples/: demo_note  examples_note  prepare-commit-msg-demo.sh
examples/bdc/: __init__.py  fail-direct-commit-to-main-demo.py  pass-version-release-merge-demo.py  skip-non-protected-branch-demo.py
examples/chain/: chain_note  commit-chain-demo.sh  merge-chain-demo.sh  patch-apply-chain-demo.sh  rebase-chain-demo.sh
examples/cli/: cli-init-demo.bash  cli-verify-demo.bash
examples/flow/: flow_note
examples/hb/: __init__.py  pc-lead-run-all-demo.py  pc-trail-empty-skip-demo.py  pcm-lead-type-filter-demo.py  pcm-trail-fail-abort-demo.py  pre-commit-lead-demo.py  pre-commit-lead-empty-demo.py  pre-commit-trail-demo.py  pre-commit-trail-empty-demo.py  prepare-commit-msg-lead-demo.py  prepare-commit-msg-trail-demo.py
examples/hooks/: all-hooks-demo.sh  post-commit-demo.sh  pre-commit-demo.sh  prepare-commit-msg-demo.sh
examples/pch/: __init__.py  catch-up-demo.py  feature-finish-demo.py  feature-landing-demo.py  hotfix-backport-demo.py  hotfix-release-demo.py  pch-pass-feature_finish_demo.bash  pch-pass-feature_finish_demo.py  pch-pass-version_release_demo.bash  pch-pass-version_release_demo.py  pch-skip-irrelevant_merge_demo.bash  pch-skip-irrelevant_merge_demo.py  pch-skip-non_merge_commit_demo.bash  pch-skip-non_merge_commit_demo.py  release-alpha-demo.py  release-backport-demo.py  release-beta-demo.py  release-cut-demo.py  release-fail-parse-demo.py  release-major-stable-demo.py  release-minor-pre-alpha-demo.py  release-minor-prototype-demo.py  skip-regular-commit-demo.py  skip-unrelated-merge-demo.py  stable-release-demo.py  sync-backport-demo.py  version-release-demo.py  vr-alpha-demo.py  vr-beta-demo.py  vr-fail-parse-demo.py  vr-major-stable-demo.py  vr-minor-pre-alpha-demo.py  vr-minor-prototype-demo.py  vr-rc-demo.py
examples/ttg/: __init__.py  fail-feature-finish-demo.py  (+33 more)
hupy/: __init__.py  __main__.py  cli.py  commit_type.py  kamilog.py  should_run_module.py  tt_gating.py  ver_grep.py
tests/: commit_type_test.py  conftest.py  ver_grep_test.py
(+308 files in other folders)
